src/test/ui/error-codes/E0599.stderr
error[E0599]: no associated item named `NotEvenReal` found for type `Foo` in the current scope
  --> $DIR/E0599.rs:14:15
   |
LL | struct Foo;
   | ----------- associated item `NotEvenReal` not found for this
...
LL |     || if let Foo::NotEvenReal() = Foo {}; //~ ERROR E0599
   |               ^^^^^^^^^^^^^^^^^^ associated item not found in `Foo`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0599"
