src/test/ui/error-codes/E0599.rs
struct Foo;

fn main() {
    || if let Foo::NotEvenReal() = Foo {}; //~ ERROR E0599
}
